# rx

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  justfile  pyproject.toml
api/: .dockerignore  .env.template  Dockerfile  compose.yml  entry.sh  gunicorn.conf.py  justfile  pyproject.toml
api/base/: admin.py  models.py
api/base/templates/base/: base.html
api/base/templatetags/: utils.py
api/conf/: asgi.py  settings.py  urls.py  wsgi.py
api/rx/: apps.py  choices.py  constants.py  models.py  urls.py  views.py
api/rx/migrations/: 0001_initial.py  0002_data.py
api/rx/templates/rx/: index.html
db/: .env.template
